src/test/deca/syntax/valid/whileFalse.deca
// Description:
//    Programme minimaliste utilisant une declaration de variable avec et sans initialisation.
//
// Resultats:
//
//
// Historique:
//    cree le 10/01/2024

{
    while (false) {
        print("Sorry, do you have a banana ?");
    }
    print("Je parle pas anglais mec");
}
